# lead

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/bundled/cpp-httplib/: httplib.h
include/bundled/nlohmann/: json.hpp  json_fwd.hpp
include/lead/: email.hpp  globals.hpp  lead.hpp  meta.hpp  server.hpp  user.hpp  utils.hpp  voc.hpp
res/config/: config.json
res/css/: googlefont.css  lead.css
res/html/: about.html  account.html  index.html  marked.html  memorize.html  passed.html  quiz.html  record.html  search.html  settings.html
res/html/fragment/: about.html  appbar.html  marked.html  memorize.html  passed.html  plan.html  quiz.html  serverinfo.html  settings.html
res/js/: lead.js
res/records/: meta.json  record.json
res/voc/: index.json  voc.json
res/voc/entries/: explanation-0  explanation-1  explanation-10  explanation-100  explanation-1000  explanation-10000  explanation-10001  explanation-10002  explanation-10003  explanation-10004  explanation-10005  explanation-10006  explanation-10007  explanation-10008  explanation-10009  explanation-1001  explanation-10010  explanation-10011  explanation-10012  explanation-10013  explanation-10014  explanation-10015  explanation-10016  explanation-10017  explanation-10018  explanation-10019  explanation-1002  explanation-10020  explanation-10021  explanation-10022  explanation-10023  explanation-10024  explanation-10025  explanation-10026  (+12754 more)
src/: email.cpp  globals.cpp  index.html  lead.js  main.cpp  meta.cpp  server.cpp  user.cpp  utils.cpp  voc.cpp  voc.json
tools/: generate_file_index.py
