cmake_minimum_required(VERSION 3.24)
project(lead)
set(CMAKE_CXX_STANDARD 17)
include_directories(include)
include_directories(include/bundled)
find_package(Threads REQUIRED)
find_package(CURL REQUIRED)
find_package(leveldb REQUIRED)
add_executable(lead src/main.cpp src/server.cpp src/user.cpp src/utils.cpp src/voc.cpp src/meta.cpp src/globals.cpp src/email.cpp)
target_link_libraries(lead Threads::Threads leveldb curl)
